TaskGenerator/src/antlr4/dependency/rules/sequencing/TwoLoopsParser.java
// Generated from TwoLoops.g4 by ANTLR 4.4

package dependency.rules.sequencing;
import java.util.*;
import complexity.*;
import org.javatuples.Pair;
import org.apache.commons.lang3.math.NumberUtils;
import unification.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TwoLoopsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, EXPR=2, IF=3, THEN=4, ELSE=5, LPAREN=6, RPAREN=7, COMMA=8, WHILE=9, 
		IDENT=10;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'expr'", "'if'", "'then'", "'else'", "'('", "')'", 
		"','", "'while'", "IDENT"
	};
	public static final int
		RULE_formula = 0, RULE_segmentSequence1 = 1, RULE_segmentSequence = 2, 
		RULE_segment = 3, RULE_expression = 4, RULE_leftSide = 5, RULE_rightSide = 6, 
		RULE_logicalFunction = 7, RULE_argList = 8, RULE_arg = 9, RULE_whileSegment = 10, 
		RULE_whileSegment1 = 11, RULE_exprSequence = 12, RULE_ifSegment = 13, 
		RULE_leftVar = 14, RULE_rightVar = 15, RULE_variable = 16;
	public static final String[] ruleNames = {
		"formula", "segmentSequence1", "segmentSequence", "segment", "expression", 
		"leftSide", "rightSide", "logicalFunction", "argList", "arg", "whileSegment", 
		"whileSegment1", "exprSequence", "ifSegment", "leftVar", "rightVar", "variable"
	};

	@Override
	public String getGrammarFileName() { return "TwoLoops.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	 
	    public List<Pair<String,String>> parseSolution(List<String> solution1){
	        //solution in form {formalVal}=actualVal
	        List<Pair<String,String>> solution = new ArrayList<>();
	        for(int i = 0;i<solution1.size();i++){
	            String s = solution1.get(i);
	            String formal = s.substring(s.indexOf("{")+1, s.lastIndexOf("}"));
	            String actual = s.substring(s.indexOf("=")+1, s.lastIndexOf(";"));
	            if(actual.equals(""))actual = formal;
	            Pair<String,String> sol = new Pair<>(formal, actual);
	            solution.add(sol);
	        }
	        return solution;

	    }

	    private List<Pair<String,String>> solution = new ArrayList<>(); 
	    public Complexity compl1;
	    public Complexity compl2;   

	public TwoLoopsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormulaContext extends ParserRuleContext {
		public Complexity resultComplexity;
		public Set<String> refVars;
		public SegmentSequence1Context s;
		public SegmentSequence1Context segmentSequence1() {
			return getRuleContext(SegmentSequence1Context.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitFormula(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{

			        //System.out.println("Starting twoLoops rule");
			    
			setState(35); ((FormulaContext)_localctx).s = segmentSequence1();

			        if(((FormulaContext)_localctx).s.valid == true){
			            ((FormulaContext)_localctx).resultComplexity =  ComplexityOperations.sequence(compl1, compl2);
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentSequence1Context extends ParserRuleContext {
		public boolean valid;
		public Pair<String,String> exprC;
		public Pair<String,String> exprD;
		public int numAInit;
		public int numBInit;
		public int numCInit;
		public int numDInit;
		public Pair<String,String> exprAInit;
		public Pair<String,String> exprBInit;
		public Pair<String,String> exprCInit;
		public Pair<String,String> exprDInit;
		public ExprSequenceContext e1;
		public WhileSegment1Context s1;
		public ExprSequenceContext e2;
		public WhileSegmentContext s2;
		public WhileSegment1Context whileSegment1() {
			return getRuleContext(WhileSegment1Context.class,0);
		}
		public ExprSequenceContext exprSequence(int i) {
			return getRuleContext(ExprSequenceContext.class,i);
		}
		public List<ExprSequenceContext> exprSequence() {
			return getRuleContexts(ExprSequenceContext.class);
		}
		public WhileSegmentContext whileSegment() {
			return getRuleContext(WhileSegmentContext.class,0);
		}
		public SegmentSequence1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segmentSequence1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterSegmentSequence1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitSegmentSequence1(this);
		}
	}

	public final SegmentSequence1Context segmentSequence1() throws RecognitionException {
		SegmentSequence1Context _localctx = new SegmentSequence1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_segmentSequence1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((SegmentSequence1Context)_localctx).valid =  true;
			setState(40);
			_la = _input.LA(1);
			if (_la==EXPR) {
				{
				setState(39); ((SegmentSequence1Context)_localctx).e1 = exprSequence();
				}
			}

			setState(42); ((SegmentSequence1Context)_localctx).s1 = whileSegment1();
			setState(44);
			_la = _input.LA(1);
			if (_la==EXPR) {
				{
				setState(43); ((SegmentSequence1Context)_localctx).e2 = exprSequence();
				}
			}

			setState(46); ((SegmentSequence1Context)_localctx).s2 = whileSegment();

			        try{
			            if(((SegmentSequence1Context)_localctx).s1.a.equals(((SegmentSequence1Context)_localctx).s2.c) || ((SegmentSequence1Context)_localctx).s1.a.equals(((SegmentSequence1Context)_localctx).s2.d) || ((SegmentSequence1Context)_localctx).s1.b.equals(((SegmentSequence1Context)_localctx).s2.c) || ((SegmentSequence1Context)_localctx).s1.b.equals(((SegmentSequence1Context)_localctx).s2.d)){
			                //a!=b, a!=c, b!=c, b!=d
			                ((SegmentSequence1Context)_localctx).valid =  false;
			                //System.out.println("valid5 = false");
			            }else{
			                //first loop must not change c and d
			                for(Pair<String,String> e : ((SegmentSequence1Context)_localctx).s1.exprs){
			                    if(e.getValue0().equals(((SegmentSequence1Context)_localctx).s2.c)){
			                        ((SegmentSequence1Context)_localctx).exprC =  e;
			                        ((SegmentSequence1Context)_localctx).valid =  false;
			                        // System.out.println("valid1 = false");
			                    }
			                    if(e.getValue0().equals(((SegmentSequence1Context)_localctx).s2.d)){
			                        ((SegmentSequence1Context)_localctx).valid =  false;
			                       // System.out.println("valid2 = false");
			                        ((SegmentSequence1Context)_localctx).exprD =  e;
			                    }
			                }
			                if(!_localctx.valid){
			                    if(_localctx.exprC!=null && _localctx.exprD!=null){
			                        // in the first loop: c=const1, d=const2
			                        try{
			                            Double.parseDouble(_localctx.exprC.getValue1());
			                            Double.parseDouble(_localctx.exprD.getValue1());
			                            compl2 = Complexity.createConstant();
			                            ((SegmentSequence1Context)_localctx).valid =  true;
			                        }
			                        catch(Exception ex){
			                           // System.out.println("valid3 = false");
			                        }
			                    }
			                }
			                if(_localctx.valid){
			                    ((SegmentSequence1Context)_localctx).valid =  false;
			                    if((((SegmentSequence1Context)_localctx).e1!=null?_input.getText(((SegmentSequence1Context)_localctx).e1.start,((SegmentSequence1Context)_localctx).e1.stop):null)!=null){
			                        //a=1, b=N init expressions present
			                        for(Pair<String,String> e : ((SegmentSequence1Context)_localctx).e1.exprs){
			                            if(e.getValue0().equals("a")){
			                                _localctx.numAInit++;
			                                ((SegmentSequence1Context)_localctx).exprAInit = e;
			                            }else if(e.getValue0().equals("b")){
			                                _localctx.numBInit++;
			                                ((SegmentSequence1Context)_localctx).exprBInit =  e;
			                            }
			                        }
			                        if(_localctx.numAInit==1 && _localctx.numBInit==1){
			                            if(_localctx.exprAInit.getValue1().equals("0")){
			                                ((SegmentSequence1Context)_localctx).valid =  true;
			                            }
			                            if(_localctx.exprBInit.getValue1().toLowerCase().equals("n")){
			                                ((SegmentSequence1Context)_localctx).valid =  true;
			                            }
			                        }
			                    }
			                    if((((SegmentSequence1Context)_localctx).e2!=null?_input.getText(((SegmentSequence1Context)_localctx).e2.start,((SegmentSequence1Context)_localctx).e2.stop):null)!=null && _localctx.valid){
			                        //c=1, d=N init expressions present
			                        ((SegmentSequence1Context)_localctx).valid =  false;
			                        for(Pair<String,String> e : ((SegmentSequence1Context)_localctx).e2.exprs){
			                            if(e.getValue0().equals("c")){
			                                _localctx.numCInit++;
			                                ((SegmentSequence1Context)_localctx).exprCInit = e;
			                            }else if(e.getValue0().equals("d")){
			                                _localctx.numDInit++;
			                                ((SegmentSequence1Context)_localctx).exprDInit =  e;
			                            }
			                        }
			                        if(_localctx.numCInit==1 && _localctx.numDInit==1){
			                            if(_localctx.exprCInit.getValue1().equals("0")){
			                                ((SegmentSequence1Context)_localctx).valid =  true;
			                            }
			                            if(_localctx.exprDInit.getValue1().toLowerCase().equals("n")){
			                                ((SegmentSequence1Context)_localctx).valid =  true;
			                            }
			                        }
			                    }
			                    // if(!_localctx.valid)System.out.println("valid6 false");
			                }
			            }
			        }catch(Exception ex){
			            ((SegmentSequence1Context)_localctx).valid =  false;
			           // System.out.println("valid7 false");
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentSequenceContext extends ParserRuleContext {
		public SegmentContext s1;
		public SegmentContext s2;
		public SegmentContext segment(int i) {
			return getRuleContext(SegmentContext.class,i);
		}
		public List<SegmentContext> segment() {
			return getRuleContexts(SegmentContext.class);
		}
		public SegmentSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segmentSequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterSegmentSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitSegmentSequence(this);
		}
	}

	public final SegmentSequenceContext segmentSequence() throws RecognitionException {
		SegmentSequenceContext _localctx = new SegmentSequenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_segmentSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); ((SegmentSequenceContext)_localctx).s1 = segment();
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EXPR) | (1L << IF) | (1L << WHILE))) != 0)) {
				{
				{
				setState(50); ((SegmentSequenceContext)_localctx).s2 = segment();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentContext extends ParserRuleContext {
		public ExpressionContext e;
		public IfSegmentContext ifSeg;
		public IfSegmentContext ifSegment() {
			return getRuleContext(IfSegmentContext.class,0);
		}
		public WhileSegmentContext whileSegment() {
			return getRuleContext(WhileSegmentContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitSegment(this);
		}
	}

	public final SegmentContext segment() throws RecognitionException {
		SegmentContext _localctx = new SegmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_segment);
		try {
			setState(59);
			switch (_input.LA(1)) {
			case WHILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(56); whileSegment();
				}
				break;
			case EXPR:
				enterOuterAlt(_localctx, 2);
				{
				setState(57); ((SegmentContext)_localctx).e = expression();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(58); ((SegmentContext)_localctx).ifSeg = ifSegment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public String ls;
		public String rs;
		public LeftSideContext ls1;
		public RightSideContext rs1;
		public TerminalNode LPAREN() { return getToken(TwoLoopsParser.LPAREN, 0); }
		public TerminalNode COMMA() { return getToken(TwoLoopsParser.COMMA, 0); }
		public RightSideContext rightSide() {
			return getRuleContext(RightSideContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TwoLoopsParser.RPAREN, 0); }
		public TerminalNode EXPR() { return getToken(TwoLoopsParser.EXPR, 0); }
		public LeftSideContext leftSide() {
			return getRuleContext(LeftSideContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); match(EXPR);
			setState(62); match(LPAREN);
			setState(63); ((ExpressionContext)_localctx).ls1 = leftSide();
			((ExpressionContext)_localctx).ls =  (((ExpressionContext)_localctx).ls1!=null?_input.getText(((ExpressionContext)_localctx).ls1.start,((ExpressionContext)_localctx).ls1.stop):null);
			setState(65); match(COMMA);
			setState(66); ((ExpressionContext)_localctx).rs1 = rightSide();

			        ((ExpressionContext)_localctx).rs =  (((ExpressionContext)_localctx).rs1!=null?_input.getText(((ExpressionContext)_localctx).rs1.start,((ExpressionContext)_localctx).rs1.stop):null);
			    
			setState(68); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftSideContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public LeftSideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftSide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterLeftSide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitLeftSide(this);
		}
	}

	public final LeftSideContext leftSide() throws RecognitionException {
		LeftSideContext _localctx = new LeftSideContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_leftSide);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); variable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightSideContext extends ParserRuleContext {
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(TwoLoopsParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TwoLoopsParser.RPAREN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public RightSideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightSide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterRightSide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitRightSide(this);
		}
	}

	public final RightSideContext rightSide() throws RecognitionException {
		RightSideContext _localctx = new RightSideContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rightSide);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); variable();
			setState(77);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(73); match(LPAREN);
				setState(74); argList();
				setState(75); match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalFunctionContext extends ParserRuleContext {
		public VariableContext v;
		public ArgListContext al;
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(TwoLoopsParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TwoLoopsParser.RPAREN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public LogicalFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterLogicalFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitLogicalFunction(this);
		}
	}

	public final LogicalFunctionContext logicalFunction() throws RecognitionException {
		LogicalFunctionContext _localctx = new LogicalFunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logicalFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); ((LogicalFunctionContext)_localctx).v = variable();
			setState(84);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(80); match(LPAREN);
				setState(81); ((LogicalFunctionContext)_localctx).al = argList();
				setState(82); match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgListContext extends ParserRuleContext {
		public ArgContext a;
		public ArgContext a1;
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TwoLoopsParser.COMMA); }
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(TwoLoopsParser.COMMA, i);
		}
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterArgList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitArgList(this);
		}
	}

	public final ArgListContext argList() throws RecognitionException {
		ArgListContext _localctx = new ArgListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_argList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); ((ArgListContext)_localctx).a = arg();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(87); match(COMMA);
				setState(88); ((ArgListContext)_localctx).a1 = arg();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public RightSideContext rs;
		public RightSideContext rightSide() {
			return getRuleContext(RightSideContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitArg(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); ((ArgContext)_localctx).rs = rightSide();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileSegmentContext extends ParserRuleContext {
		public String c;
		public String d;
		public LeftVarContext e1;
		public RightVarContext e2;
		public SegmentSequenceContext s;
		public LeftVarContext leftVar() {
			return getRuleContext(LeftVarContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(TwoLoopsParser.LPAREN, 0); }
		public RightVarContext rightVar() {
			return getRuleContext(RightVarContext.class,0);
		}
		public SegmentSequenceContext segmentSequence() {
			return getRuleContext(SegmentSequenceContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(TwoLoopsParser.COMMA); }
		public TerminalNode RPAREN() { return getToken(TwoLoopsParser.RPAREN, 0); }
		public TerminalNode WHILE() { return getToken(TwoLoopsParser.WHILE, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(TwoLoopsParser.COMMA, i);
		}
		public WhileSegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileSegment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).enterWhileSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TwoLoopsListener ) ((TwoLoopsListener)listener).exitWhileSegment(this);
		}
	}
